Add mu-plugins as a submodule

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,11 @@ WP_DEBUG=true
 S3_ACCESS_KEY_ID=''
 S3_SECRET_ACCESS_KEY=''
 S3_BUCKET='ojeel.com-uploads'
+
+# WPVite Bridge Configuration
+
+# Required: Shared secret for HMAC signing (generate a strong random string)
+WPVITE_SHARED_SECRET=your_secure_shared_secret_here
+
+# Optional: Allowed IP addresses (comma-separated, leave empty to allow all)
+WPVITE_ALLOWED_IPS=
