--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     }],
     "config": {
         "platform": {
-            "php": "7.4"
+            "php": "^8.4"
         },
         "vendor-dir": "content/vendor",
         "allow-plugins": {
