Removed composer related files

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,8 @@
 composer.lock
 
 # Ignore Wordpress files
-wp/
+/wp
+/wp/*
 /content/*/*
-
-# Track following files from themes
-!/content/themes/wpvite/
-!/content/themes/wpvite-child/
-
-# Track following files from plugins
-!/content/mu-plugins/wpvite/
+/content/*
+/content
